force-app/main/default/objects/Zeikubun__c/Zeikubun__c.object-meta.xml
<CustomObject>
    <label>税区分</label>
    <nameField>
        <label>税区分</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>