force-app/main/default/objects/Zeikubun__c/fields/KensakuFurikae__c.field-meta.xml
<CustomField>
    <fullName>KensakuFurikae__c</fullName>
    <label>検索（振替）</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>