force-app/main/default/objects/Zeikubun__c/fields/KensakuShunyu__c.field-meta.xml
<CustomField>
    <fullName>KensakuShunyu__c</fullName>
    <label>検索（収入）</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>