force-app/main/default/objects/Zeikubun__c/fields/KensakuSisyutsu__c.field-meta.xml
<CustomField>
    <fullName>KensakuSisyutsu__c</fullName>
    <label>検索（支出）</label>
    <length>1</length>
    <type>Text</type>
</CustomField>