force-app/main/default/objects/Zeikubun__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>メモ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>