force-app/main/default/objects/Zeikubun__c/fields/Shiyou__c.field-meta.xml
<CustomField>
    <fullName>Shiyou__c</fullName>
    <label>使用</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>